<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView1"
        style="@style/ShapeAppearance.MaterialComponents.LargeComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/android_cloud"
        android:textColor="#0B1447"
        android:textSize="44sp"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30sp"
        android:fontFamily="monospace"
        android:text="@string/update"
        android:textColor="#0B1447"
        android:textSize="30sp" />

    <Button
        android:id="@+id/updateBtn"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:text="@string/click_here1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30sp"
        android:fontFamily="monospace"
        android:text="@string/retrieve"
        android:textColor="#0B1447"
        android:textSize="30sp" />

    <Button
        android:id="@+id/retrieveBtn"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:text="@string/click_here2" />

</LinearLayout>
