<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_foreground"
        tools:context=".Retrieve"
        android:orientation="vertical">


        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:backgroundTint="@color/cardview_shadow_start_color"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve"
            android:gravity="center_horizontal"
            android:textSize="36sp"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel.CenterStacked"
            android:fontFamily="monospace"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Number"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:fontFamily="monospace"
            style="@style/CardView.Dark"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"

            />
        <Button
            android:id="@+id/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_number"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/cardview_shadow_start_color"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="String"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:fontFamily="monospace"
            style="@style/CardView.Dark"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"

            />
        <Button
            android:id="@+id/strings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_string"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/cardview_shadow_start_color"
            />
      </LinearLayout>
</ScrollView>